--- a/exercise-dog-image/src/App.css
+++ b/exercise-dog-image/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.loading-page {
+  animation: loading-animation 1s infinite;
+  width: 100vw;
+  height: 100vh;
+  font-size: 200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes loading-animation {
+
+  0% {
+    color: white;
+    font-size: 200px;
+  }
+  50% {
+    color: rgb(255, 0, 0);
+    font-size: 300px;
+  }
+  100% {
+    color: rgb(0, 0, 0);
+    font-size: 200px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content {
+  align-items: center;
+  background-color: #969696;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-around;
+}
+
+
+.dog-image {
+  display: flex;
+  height: 500px;
+  justify-content: center;
+  width: 500px;
+  transition: 0.5s;
+  transform: scale(0.95);
+}
+
+.dog-image img {
+  object-fit: contain;
+  transition: 0.5s;
+  transform: scale(0.95);
+}
+
+.dog-image:hover {
+  object-fit: contain;
+  transition: 0.5s;
+  transform: scale(0.99);
+}
+
+.button {
+  align-items: center;
+  background-color: rgb(84, 135, 170);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  height: 2em;
+  justify-content: center;
+  text-align: center;
+  width: 5em;
+}
+
+.button {
+
 }
